add memory argument to surefire